remove problems from navigation

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,11 +7,7 @@
       <a href="{{ "/lectures/" | prepend: site.baseurl}}"
         >Lectures</a>
     </li>
-    <li id="notes_link">
-      <a href="{{ "/problems/" | prepend: site.baseurl}}"
-        >Problems</a>
-    </li>
-		<li id="notes_link">
+		<li id="syllabus_link">
       <a href="{{ "/syllabus/" | prepend: site.baseurl}}"
         >Overview and Syllabus</a>
     </li>
